kyverno/manifests/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-pod
spec:
  containers:
  - name: hostpath-container
    image: busybox
    command: [ "sh", "-c", "sleep 3600" ]
    volumeMounts:
    - mountPath: /data
      name: hostpath-volume
  volumes:
  - name: hostpath-volume
    hostPath:
      path: /data
      type: DirectoryOrCreate
